--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # The directory Mix will write compiled artifacts to.
-/bst_service/_build/
+/_build/
 
 # If you run "mix test --cover", coverage assets end up here.
 /cover/
